<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">


            <TextView
                android:id="@+id/bExp"
                style="@style/Result_Screen"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">


            <TextView
                android:id="@+id/bRes"
                style="@style/Result_Screen"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">


            <TextView
                android:id="@+id/bAC"
                style="@style/Button_theme"
                android:text="@string/ac" />

            <TextView
                android:id="@+id/bLP"
                style="@style/Button_theme"
                android:text="@string/bLP" />

            <TextView
                android:id="@+id/bRP"
                style="@style/Button_theme"
                android:text="@string/bRP" />

            <TextView
                android:id="@+id/bDivide"
                style="@style/Button_theme"
                android:text="@string/bDivide" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">


            <TextView
                android:id="@+id/b7"
                style="@style/Button_theme"
                android:text="@string/_7" />

            <TextView
                android:id="@+id/b8"
                style="@style/Button_theme"
                android:text="@string/_8" />

            <TextView
                android:id="@+id/b9"
                style="@style/Button_theme"
                android:text="@string/_9" />

            <TextView
                android:id="@+id/bMultiple"
                style="@style/Button_theme"
                android:text="@string/bMultiple" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">


            <TextView
                android:id="@+id/b4"
                style="@style/Button_theme"
                android:text="@string/_4" />

            <TextView
                android:id="@+id/b5"
                style="@style/Button_theme"
                android:text="@string/_5" />

            <TextView
                android:id="@+id/b6"
                style="@style/Button_theme"
                android:text="@string/_6" />

            <TextView
                android:id="@+id/bMinus"
                style="@style/Button_theme"
                android:text="@string/bMinus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">


            <TextView
                android:id="@+id/b1"
                style="@style/Button_theme"
                android:text="@string/_1" />

            <TextView
                android:id="@+id/b2"
                style="@style/Button_theme"
                android:text="@string/_2" />

            <TextView
                android:id="@+id/b3"
                style="@style/Button_theme"
                android:text="@string/_3" />

            <TextView
                android:id="@+id/bPlus"
                style="@style/Button_theme"
                android:text="@string/bPlus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">


            <TextView
                android:id="@+id/bBack"
                style="@style/Button_theme"
                android:text="@string/back" />

            <TextView
                android:id="@+id/b0"
                style="@style/Button_theme"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/bDot"
                style="@style/Button_theme"
                android:text="@string/bDot" />

            <TextView
                android:id="@+id/bEqual"
                style="@style/Equal_theme"
                android:text="@string/bEqual" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>